# modeltrainprotocol

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml  release.yml  test.yml
docs/: DEPLOYMENT.md  README.md  requirements.txt
docs/source/: api_reference.rst  conf.py  context.rst  getting_started.rst  guardrails.rst  index.rst  instructions.rst  saving_models.rst  snippets.rst  system_architecture.rst  tokens.rst  tokensets.rst
examples/: cat_model.json  cat_template.json  example.py  example_model.json  example_template.json
examples/prototyping/: prototyping.py
model_train_protocol/: Protocol.py  __init__.py  protocol.py  schema_version.py  template_version.py  utils.py
model_train_protocol/_internal/: ProtocolFile.py  TemplateFile.py
model_train_protocol/common/: __init__.py  constants.py  util.py  utils.py
model_train_protocol/csv/: __init__.py  conversion.py
model_train_protocol/errors/: __init__.py  base.py  conversion.py  guardrails.py  instruction_input.py  instructions.py  outputs.py  protocol.py  protocol_file.py  providers.py  state_machine.py  template_file.py  tokens.py
model_train_protocol/integration/: ProtocolFile.py  TemplateFile.py  __init__.py
model_train_protocol/schemas/: __init__.py
model_train_protocol/utils/: __init__.py  protected.py  public.py
model_train_protocol/v1/: __init__.py  utils.py
model_train_protocol/versioning/: protocol.py
mtp/: protocol.py
mtp/methods/: guardrail.py  instruction.py  util.py
schemas/0.3.0/: bloom.json  bloom_schema.json  template_schema.json
schemas/v0/: bloom_0_3_1.json  bloom_0_3_2.json  template_0_3_1.json
schemas/v1/: template_1_0_0.json  template_1_1_0.json
scripts/: csv_conversion.py  pydantic_to_schemas.py  schema_to_pydantic.py  schema_to_pydantic_v2.py  update_schemas.py
src/: Protocol.py  __init__.py  protocol.py
src/common/: Guardrail.py  __init__.py  guardrail.py  instruction.py  token.py  util.py
src/methods/: instruction.py  token.py  util.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  comprehensive_instructions.py  correct_protocol_utils.py  correct_protocols.py  csv_fixtures.py  guardrails.py  instructions.py  protocol_fixtures.py  protocol_workflow_instructions.py  sample_protocols.py  samples.py  state_machine_protocols.py  test_samples.py  test_tokens.py  tokens.py  tokensets.py  workflow_context_instructions.py
tests/integration/: __init__.py  test_file_operations.py  test_protocol_workflow.py
tests/unit/: __init__.py
utils/: __init__.py
(+122 files in other folders)
