[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["assets", "examples"]

[project]
name = "mtp"
version = "1.0.0"
description = "Create a Model Train Protocol JSON file"
requires-python = ">=3.9"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Databiomes Inc.", email = "dev@databiomes.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "emoji>=2.0.0",
]