[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_train_protocol*"]
exclude = ["assets", "examples"]

[project]
name = "model-train-protocol"
version = "1.0.0"
description = "Standardized protocol to train models on Databiomes"
requires-python = ">=3.9"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "Databiomes Inc.", email = "dev@databiomes.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "emoji>=2.0.0",
]